--- a/src/app/vertical-card/vertical-card.component.html
+++ b/src/app/vertical-card/vertical-card.component.html
@@ -2,10 +2,10 @@
     <div class="card">
      <div class="card-body">
        <h5 class="card-title">{{title}}
-        <a role="button" class="btn btn-primary" href="FirstLayout">
-          Download
+        <a role="button" class="btn btn-primary" href={{link}}>
+          {{button}}
         </a>
        </h5>
      </div>
-       <img src="assets/IOS.jpg" class="card-img-bottom" alt="...">
+       <img src={{img}} class="card-img-bottom" alt="...">
      </div>
