--- a/src/app/body2/body2.component.html
+++ b/src/app/body2/body2.component.html
@@ -21,3 +21,8 @@
       <app-vertical-card class="column" link="SecondLayout" 
       button="Log in to Chat" title="Chat on the web!" img=""> Loading... </app-vertical-card>
     </div>
+    <div class="container-fluid d-flex">
+      <div *ngFor="let card of cards">
+        
+      </div>
+    </div>
