--- a/src/app/body2/body2.component.html
+++ b/src/app/body2/body2.component.html
@@ -9,20 +9,9 @@
     </span>
     </div>
     <div class="container-fluid d-flex row justify-content-center">
-      <app-vertical-card class="column" link="https://apps.apple.com/app/apple-store/id447188370"
-       button="Download" title="IOS" img="assets/IOS.jpg"> Loading... </app-vertical-card>
-
-      <app-vertical-card class="column" link="https://play.google.com/store/apps/details?id=com.snapchat.android&referrer=download_page"
-       button="Download" title="Android" img="assets/android.jpg"> Loading... </app-vertical-card>
-
-      <app-vertical-card class="column" link="SecondLayout" 
-      button="Log in to Chat" title="Desktop" img="assets/Labtop Snap.png"> Loading... </app-vertical-card>
-
-      <app-vertical-card class="column" link="SecondLayout" 
-      button="Log in to Chat" title="Chat on the web!" img=""> Loading... </app-vertical-card>
-    </div>
-    <div class="container-fluid d-flex">
-      <div *ngFor="let card of cards">
-        
+      <div class="col" *ngFor="let card of cards">
+        <app-vertical-card class="column" img={{card.img}} title={{card.title}} button={{card.button}} link={{card.link}}> 
+          Loading... 
+        </app-vertical-card>
       </div>
     </div>
