--- a/src/app/body2/body2.component.html
+++ b/src/app/body2/body2.component.html
@@ -9,8 +9,8 @@
     </span>
     </div>
     <div class="container-fluid d-flex row justify-content-center">
-      <div class="col" *ngFor="let card of cards">
-        <app-vertical-card class="column" img={{card.img}} title={{card.title}} button={{card.button}} link={{card.link}}> 
+      <div class="col" *ngFor="let product of products">
+        <app-vertical-card class="column" img={{product.img}} title={{product.title}} button={{product.button}} link={{product.link}}> 
           Loading... 
         </app-vertical-card>
       </div>
