--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -1,1 +1,33 @@
-<p>add-product works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <form #postForm="ngForm">
+
+                <div class="input-group">
+                    <span class="input-group-text">Image Path</span>
+                    <input type="text" class="form-control">
+                </div>
+
+                <div class="input-group">
+                    <span class="input-group-text">Title</span>
+                    <input type="text" class="form-control">
+                </div>
+
+                <div class="input-group">
+                    <span class="input-group-text">Button Text</span>
+                    <input type="text" class="form-control">
+                </div>
+
+                <div class="input-group">
+                    <span class="input-group-text">Link</span>
+                    <input type="text" class="form-control">
+                </div>
+
+                <button class="btn btn-primary" type="submit">
+                    Update Card Info
+                </button>
+
+            </form>
+        </div>
+    </div>
+</div>
