--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <form #postForm="">
+            <form #postForm="ngForm" (ngSubmit)="addProduct()">
 
                 <div class="input-group">
                     <span class="input-group-text">Image Path</span>
