--- a/src/app/body2/body2.component.html
+++ b/src/app/body2/body2.component.html
@@ -8,9 +8,10 @@
         </a>
     </span>
     </div>
+
     <div class="container-fluid d-flex row justify-content-center">
       <div class="col" *ngFor="let product of products">
-        <app-vertical-card class="column" img={{product.img}} title={{product.title}} button={{product.button}} link={{product.link}}> 
+        <app-vertical-card class="" img={{product.img}} title={{product.title}} button={{product.button}} link={{product.link}}> 
           Loading... 
         </app-vertical-card>
       </div>
