--- a/src/app/body2/body2.component.html
+++ b/src/app/body2/body2.component.html
@@ -1,18 +1,20 @@
-<div class="scroll">
-    <div class="body-text">
-      <span style="font-family: Arial, Helvetica, sans-serif; font-size: 14px;" class="text">
-        <h1>Get Snapchat for any device</h1>
-        <p>An adventure awaits. Hang out with your friends on our desktop app and keep the conversation going on mobile.</p>
-        <a role="button" class="btn btn-dark" href="SecondLayout">
-          Log in to chat
-        </a>
+<div class="scroll container-fluid">
+  <div class="body-text">
+    <span style="font-family: Arial, Helvetica, sans-serif; font-size: 14px;" class="text">
+      <h1>Get Snapchat for any device</h1>
+      <p>An adventure awaits. Hang out with your friends on our desktop app and keep the conversation going on mobile.
+      </p>
+      <a role="button" class="btn btn-dark" href="SecondLayout">
+        Log in to chat
+      </a>
     </span>
-    </div>
+  </div>
 
-    <div class="container-fluid d-flex row justify-content-center">
+  <div class="container-fluid d-flex row justify-content-center">
       <div class="col" *ngFor="let product of products">
-        <app-vertical-card class="" img={{product.img}} title={{product.title}} button={{product.button}} link={{product.link}}> 
-          Loading... 
+        <app-vertical-card class="" img={{product.img}} title={{product.title}} button={{product.button}} link={{product.link}}>
+          Loading...
         </app-vertical-card>
       </div>
     </div>
+  </div>
