Create account layout created

--- a/src/app/create-account/create-account.component.html
+++ b/src/app/create-account/create-account.component.html
@@ -1,3 +1,4 @@
+<p>create-account works!</p>
 <section class="w-100 px-4 py-5 custom" style="border-radius: .5rem .5rem 0 0;">
     <div class="row d-flex justify-content-center">
       <div class="col-12 col-md-8 col-lg-6 col-xl-6">
