Create account layout routed

--- a/src/app/log-in-form/log-in-form.component.html
+++ b/src/app/log-in-form/log-in-form.component.html
@@ -24,6 +24,6 @@
       </div>
     </div>
     <div class="texting">
-      <p class="mb-0 mt-4" style="text-align: center;">New to Snapchat? <a href="#!" class="text-black fw-bold">Sign Up</a></p>
+      <p class="mb-0 mt-4" style="text-align: center;">New to Snapchat? <a href="create" class="text-black fw-bold">Sign Up</a></p>
     </div>
   </section>
