--- a/src/app/log-in-form/log-in-form.component.html
+++ b/src/app/log-in-form/log-in-form.component.html
@@ -8,22 +8,25 @@
 
               <h2 class="fw-bold mb-3 text-center">Log In</h2>
               <p class="text-black-50 text-center">to continue to Ads Manager</p>
-
-              <div class="form-outline form-white mb-4">
-                <label class="form-label" for="typeEmailX">Username or Email</label>
-                <input type="email" id="typeEmailX" class="form-control form-control-lg">
-              </div>
-              <div class="form-outline form-white mb-4">
-                <label class="form-label" for="typeEmailX" style="margin-left: 0px;">Password</label>
-                <input type="email" id="typeEmailX" class="form-control form-control-lg">
-              </div>
-              <button href="#" class="btn btn-outline-light btn-lg bg-dark px-5" type="submit">Login</button>
+              <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
+                <div class="form-outline form-white mb-4">
+                  <label class="form-label">Email</label>
+                  <input ngModel name="email" type="email" class="form-control form-control-lg" required email>
+                </div>
+                <div class="form-outline form-white mb-4">
+                  <label class="form-label">Password</label>
+                  <input ngModel name="password" type="password" class="form-control form-control-lg" required password>
+                </div>
+                <button href="#" class="btn btn-outline-light btn-lg bg-dark px-5" type="submit" [disabled] = "!authForm.valid" (click)="buttonClicked=' = Login'">Login</button>
+                <div class="texting">
+                  <p class="mb-0 mt-4" style="text-align: center;">New to Snapchat? 
+                    <a href="create" class="text-black fw-bold">Sign Up</a>
+                  </p>
+                </div>
+              </form>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="texting">
-      <p class="mb-0 mt-4" style="text-align: center;">New to Snapchat? <a href="create" class="text-black fw-bold">Sign Up</a></p>
     </div>
   </section>
